# ai-agent-u-ai-1-new

./: .gitignore  AGENT_BOARD.md  DEV_LOG.md  INSTALL_GUIDE_zh.md  PROGRESS.md  PROJECT_CONTEXT.md  README.md  RELEASE_NOTES_v0.1.7.md  RELEASE_NOTES_v0.1.8.md  RELEASE_NOTES_v0.1.9.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
app/: globals.css  layout.tsx
components/: app-shell.tsx
docs/: agent-background-run-design.md  agent-engine-config-audit.md  ai-assistant-page-visual-upgrade-options.md  assistant-memory-source-audit.md  background-run-design.md  button-interaction-loading-audit.md  chat-projects-design.md  customer-token-initial-setup-design.md  global-visual-system-guidelines.md  global-visual-system-rollout-audit.md  macos-portable-startup-design.md  manual-smoke-test-real-token.md  moyu-center-design.md  openclaw-auth-hello-ok-notes.md  openclaw-auth-source-notes.md  openclaw-backend-implementation-notes.md  openclaw-backend-research.md  openclaw-config-schema-audit.md  openclaw-device-pairing-flow.md  openclaw-http-api-evaluation.md  openclaw-initial-setup-design.md  openclaw-official-ui-gateway-review.md  openclaw-pairing-auth-notes.md  openclaw-self-diagnostics-design.md  openclaw-smoke-test.md  openclaw-ws-rpc-notes.md  portable-data-directory-design.md  portable-security-and-redaction-policy.md  portable-usb-ab-mode-feasibility.md  product-readiness-audit-v0.3.0.md  real-token-usage-audit.md  release-checklist.md  remaining-pages-visual-deep-audit.md  skill-center-audit-and-redesign.md  skill-center-install-ux-audit.md  skill-install-uninstall-design.md  stage-release-notes.md  ui-copy-and-product-language-audit.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  update.rs
(+63 files in other folders)
