[package]
name = "ai-agent-workspace"
version = "0.1.8"
description = "AI Agent Workspace"
authors = ["AI Agent Workspace"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
ed25519-dalek = "2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
rfd = "0.15"
calamine = "0.26"
csv = "1.3"
zip = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
